2004-08-03  Davyd Madeley  <davyd@ucc.asn.au>

	* battstat_applet.c (size_allocate): Use the size_allocate signal
	to get the panel real size. Fixes bug #144413.
	(create_layout): Add a intermediate vbox to the applet layout to
	make the applet icons centered on wide vertical panels. Fixes bug
	#136457.
	(change_orient): Test if the charge percent is displayed before
	making the applet horizontal on vertical panels.
	Patch by Vincent Noel <vnoel@cox.net>.

2004-07-25  Kjartan Maraas  <kmaraas@gnome.org>

	* battstat_applet.c: (destroy_applet): Merge fix
	for bug #145340 from stable. (Fixes a small leak).

2004-07-22  Davyd Madeley  <davyd@ucc.asn.au>

	* battstat/battstat_applet.c: Fix references to certain apm_info
	structs that don't exist in FreeBSD. Patch from Joe Marcus Clarke
	<marcus@freebsd.org>. Closes #148048.

2004-07-09  Vincent Noel  <vnoel@cox.net>

	* battstat_applet.c (change_orient): Make the applet horizontal
	on wide vertical panels.

2004-07-02  Christian Neumair  <chris@gnome-de.org>

	* properties.c (prop_cb): Fix 'Probress Bar' a11y typos.

2004-06-10  Dennis Smit  <ds@nerds-incorporated.org>
	
	* properties.c (prop_cb):

	Accessibility fixes bug #135374.

	Patch by: Karthik BG  <kkbg@softhome.net>

2004-05-27  Davyd Madeley  <davyd@ucc.asn.au>

	* battstat_applet.c:
	- Ensure battery warning dialogs are line wrapped.
	- Add time remaining to low battery warning dialog.

2004-05-27  Davyd Madeley  <davyd@ucc.asn.au>

	* battstat_applet.c: Remove all uses of snprintf and replace them with
	g_strdup and g_strdup_printf. Closes #143210.

2004-05-23  Davyd Madeley  <davyd@ucc.asn.au>

	* battstat_applet.c:
	- Improve and apply a fix from Richard Kinder <r_kinder@yahoo.com> to
	make the battery warning dialog appear every time the battery power
	drops below the "red-line". Closes #138235.
	- Require the battery to be present to display the low power warning.
	This means if ACPId stops, the warning dialog will not be displayed.