@@ -1,3 +1,9 @@
+2004-08-08  Davyd Madeley  <davyd@ucc.asn.au>
+
+	* battstat_applet.c: Huge string break. Improved all strings to give
+	battery state in form "xx hours xx minutes (xx%) remaining". Closes
+	#89866. Also makes warning dialogs more HIG compliant.
+
 2004-08-03  Davyd Madeley  <davyd@ucc.asn.au>
 
 	* battstat_applet.c (size_allocate): Use the size_allocate signal
